--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "morgan": "~1.0.0",
     "errors": "~0.1.0",
     "q": "~1.0.1",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "lodash": "~2.4.1",
+    "formidable": "latest"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
