--- a/package.json
+++ b/package.json
@@ -20,53 +20,55 @@
   "license": "BSD",
   "readmeFilename": "README.md",
   "dependencies": {
+    "async": "latest",
+    "aws-sdk": "~2.0.0-rc.19",
+    "bcrypt": "~0.7.7",
+    "body-parser": "^1.0.1",
+    "colors": "~0.6.2",
+    "common-errors": "~0.4.6",
+    "compression": "^1.0.1",
+    "config": "~0.4.35",
+    "connect-ensure-login": "~0.1.1",
+    "connect-flash": "latest",
+    "connect-mongo": "latest",
+    "cookie-parser": "^1.0.1",
+    "cookie-session": "^1.0.1",
+    "debug": "~0.7.4",
+    "errors": "~0.1.0",
     "express": "~4.0.0",
+    "express-session": "^1.0.2",
+    "forever": "latest",
+    "formidable": "latest",
+    "grunt": "latest",
+    "grunt-bower-task": "latest",
+    "grunt-cli": "latest",
     "hashids": "~0.3.1",
     "jade": "latest",
+    "lodash": "~2.4.1",
+    "mean-logger": "latest",
+    "method-override": "^1.0.0",
+    "mime": "~1.2.11",
+    "mongoosastic": "latest",
     "mongoose": "~3.6.20",
-    "connect-mongo": "latest",
-    "connect-flash": "latest",
+    "mongoose-auto-increment": "~1.3.1",
+    "mongoose-pureautoinc": "~2012.1.0",
+    "mongoose-unique-validator": "~0.1.0",
+    "morgan": "~1.0.0",
+    "oauth2orize": "~1.0.0",
     "passport": "latest",
-    "passport-local": "latest",
     "passport-facebook": "latest",
-    "passport-twitter": "latest",
     "passport-github": "latest",
     "passport-google-oauth": "latest",
-    "underscore": "latest",
-    "async": "latest",
-    "view-helpers": "latest",
-    "mean-logger": "latest",
-    "forever": "latest",
-    "grunt": "latest",
-    "grunt-cli": "latest",
-    "grunt-bower-task": "latest",
-    "mongoose-unique-validator": "~0.1.0",
-    "mongoose-pureautoinc": "~2012.1.0",
-    "mongoose-auto-increment": "~1.3.1",
-    "mime": "~1.2.11",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
+    "passport-local": "latest",
     "passport-oauth2-client-password": "~0.1.1",
-    "oauth2orize": "~1.0.0",
-    "debug": "~0.7.4",
-    "connect-ensure-login": "~0.1.1",
-    "bcrypt": "~0.7.7",
-    "config": "~0.4.35",
-    "body-parser": "^1.0.1",
-    "method-override": "^1.0.0",
-    "compression": "^1.0.1",
-    "express-session": "^1.0.2",
-    "cookie-session": "^1.0.1",
-    "static-favicon": "^1.0.2",
-    "cookie-parser": "^1.0.1",
-    "morgan": "~1.0.0",
-    "errors": "~0.1.0",
+    "passport-twitter": "latest",
     "q": "~1.0.1",
-    "colors": "~0.6.2",
-    "lodash": "~2.4.1",
-    "formidable": "latest",
-    "common-errors": "~0.4.6",
-    "aws-sdk": "~2.0.0-rc.19"
+    "restler": "^3.2.2",
+    "static-favicon": "^1.0.2",
+    "underscore": "latest",
+    "view-helpers": "latest"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
