--- a/package.json
+++ b/package.json
@@ -21,52 +21,52 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "async": "latest",
-    "aws-sdk": "~2.0.0-rc.19",
-    "bcrypt": "~0.7.7",
-    "body-parser": "^1.0.1",
-    "colors": "~0.6.2",
-    "common-errors": "~0.4.6",
-    "compression": "^1.0.1",
-    "config": "~0.4.35",
-    "connect-ensure-login": "~0.1.1",
+    "aws-sdk": "latest",
+    "bcrypt": "latest",
+    "body-parser": "latest",
+    "colors": "latest",
+    "common-errors": "latest",
+    "compression": "latest",
+    "config": "latest",
+    "connect-ensure-login": "latest",
     "connect-flash": "latest",
     "connect-mongo": "latest",
-    "cookie-parser": "^1.0.1",
-    "cookie-session": "^1.0.1",
-    "debug": "~0.7.4",
-    "errors": "~0.1.0",
-    "express": "~4.0.0",
-    "express-session": "^1.0.2",
+    "cookie-parser": "latest",
+    "cookie-session": "latest",
+    "debug": "latest",
+    "errors": "latest",
+    "express": "latest",
+    "express-session": "latest",
     "forever": "latest",
     "formidable": "latest",
     "grunt": "latest",
     "grunt-bower-task": "latest",
     "grunt-cli": "latest",
-    "hashids": "~0.3.1",
+    "hashids": "latest",
     "jade": "latest",
-    "lodash": "~2.4.1",
+    "lodash": "latest",
     "mean-logger": "latest",
-    "method-override": "^1.0.0",
-    "mime": "~1.2.11",
+    "method-override": "latest",
+    "mime": "latest",
     "mongoosastic": "latest",
-    "mongoose": "~3.6.20",
-    "mongoose-auto-increment": "~1.3.1",
-    "mongoose-pureautoinc": "~2012.1.0",
-    "mongoose-unique-validator": "~0.1.0",
-    "morgan": "~1.0.0",
-    "oauth2orize": "~1.0.0",
+    "mongoose": "latest",
+    "mongoose-auto-increment": "latest",
+    "mongoose-pureautoinc": "latest",
+    "mongoose-unique-validator": "latest",
+    "morgan": "latest",
+    "oauth2orize": "latest",
     "passport": "latest",
     "passport-facebook": "latest",
     "passport-github": "latest",
     "passport-google-oauth": "latest",
-    "passport-http": "~0.2.2",
-    "passport-http-bearer": "~1.0.1",
+    "passport-http": "latest",
+    "passport-http-bearer": "latest",
     "passport-local": "latest",
-    "passport-oauth2-client-password": "~0.1.1",
+    "passport-oauth2-client-password": "latest",
     "passport-twitter": "latest",
-    "q": "~1.0.1",
-    "restler": "^3.2.2",
-    "static-favicon": "^1.0.2",
+    "q": "latest",
+    "restler": "latest",
+    "static-favicon": "latest",
     "underscore": "latest",
     "view-helpers": "latest"
   },
