--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "passport-twitter": "latest",
     "q": "latest",
     "restler": "latest",
+    "serve-favicon": "^2.1.3",
     "static-favicon": "latest",
     "underscore": "latest",
     "view-helpers": "latest"
