--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "grunt": "latest",
     "grunt-bower-task": "latest",
     "grunt-cli": "latest",
-    "hashids": "latest",
+    "hashids": "1.0.0",
     "jade": "latest",
+    "jsonwebtoken": "^1.1.2",
     "lodash": "latest",
     "mean-logger": "latest",
     "method-override": "latest",
@@ -65,30 +66,34 @@
     "passport-oauth2-client-password": "latest",
     "passport-twitter": "latest",
     "q": "latest",
+    "redis": "^0.12.1",
     "restler": "latest",
     "underscore": "latest",
     "view-helpers": "latest"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-timer": "~0.3.1",
-    "grunt-connect": "~0.2.0",
-    "grunt-clean": "~0.4.0",
-    "grunt-bump": "0.0.13",
-    "grunt-s3": "~0.2.0-alpha.3",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "latest",
     "grunt-aws": "~0.3.0",
-    "grunt-docco": "~0.3.2",
+    "grunt-bump": "0.0.15",
+    "grunt-clean": "~0.4.0",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-connect": "~0.2.0",
     "grunt-contrib-clean": "latest",
+    "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "latest",
     "grunt-contrib-copy": "latest",
     "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-imagemin": "latest",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "latest",
-    "grunt-autoprefixer": "latest",
-    "grunt-contrib-imagemin": "latest"
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-docco": "~0.3.3",
+    "grunt-node-inspector": "^0.1.5",
+    "grunt-nodemon": "^0.3.0",
+    "grunt-s3": "~0.2.0-alpha.3",
+    "grunt-timer": "~0.5.8"
   },
   "engines": {
     "node": "~0.10.26",
