replaced busboy with mutler

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "aws-sdk": "latest",
     "bcrypt": "latest",
     "body-parser": "latest",
-    "busboy": "^0.2.9",
     "colors": "latest",
     "common-errors": "latest",
     "compression": "latest",
@@ -52,6 +51,7 @@
     "mongoosastic": "latest",
     "mongoose": "latest",
     "morgan": "latest",
+    "multer": "^0.1.8",
     "oauth2orize": "latest",
     "passport": "latest",
     "passport-facebook": "latest",
