--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "async": "latest",
-    "aws-sdk": "latest",
+    "aws-sdk": "^2.1.25",
     "bcrypt": "latest",
     "body-parser": "latest",
     "colors": "latest",
