--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "passport-twitter": "latest",
     "q": "latest",
     "redis": "^0.12.1",
+    "request": "^2.57.0",
     "restler": "latest",
     "s3": "^4.4.0",
     "underscore": "latest",
