fixing clipboard and social share

--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "errors": "latest",
     "express": "latest",
     "express-session": "latest",
+    "express-useragent": "^0.2.0",
     "forever": "latest",
     "formidable": "latest",
     "hashids": "1.0.0",
+    "iron": "^2.1.3",
     "jade": "latest",
     "jsonwebtoken": "^1.1.2",
     "kue": "^0.8.12",
