--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "async": "latest",
     "aws-sdk": "^2.1.25",
     "bcrypt": "latest",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "latest",
     "busboy": "^0.2.9",
     "colors": "latest",
@@ -33,8 +34,10 @@
     "connect-ensure-login": "latest",
     "connect-flash": "latest",
     "connect-mongo": "latest",
+    "connect-redis": "^3.0.1",
     "cookie-parser": "latest",
     "cookie-session": "latest",
+    "cors": "~2.4.1",
     "debug": "latest",
     "errors": "latest",
     "express": "latest",
@@ -52,8 +55,8 @@
     "method-override": "latest",
     "mime": "latest",
     "moment": "^2.10.2",
-    "mongoosastic": "latest",
-    "mongoose": "latest",
+    "mongoosastic": "^3.4.0",
+    "mongoose": "^4.2.4",
     "morgan": "latest",
     "multer": "^0.1.8",
     "oauth2orize": "latest",
