--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "grunt-timer": "~0.5.8"
   },
   "engines": {
-    "node": "~0.10.26",
-    "npm": ">1.3.14"
+    "node": "~0.12.7",
+    "npm": ">2.11.3
+"
   }
 }
