changes node engin versions

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "restler": "latest",
     "s3": "^4.4.0",
     "underscore": "latest",
+    "aws-cloudfront-sign": "latest",
     "view-helpers": "latest"
   },
   "devDependencies": {
