i needed to verify if the bot was parsing the html correctly and sending the data as expected. we also need to introduce hooks into the 'vault' tech, hooking is necessary to update important file meta.
required standard for creating files on ixit-vault

--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "async": "latest",
-    "aws-sdk": "^2.1.25",
-    "bcrypt": "latest",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "latest",
     "busboy": "^0.2.9",
@@ -31,8 +29,6 @@
     "compression": "latest",
     "config": "latest",
     "connect-ensure-login": "latest",
-    "connect-flash": "latest",
-    "connect-mongo": "latest",
     "connect-redis": "^3.0.1",
     "cookie-parser": "latest",
     "cookie-session": "latest",
@@ -45,9 +41,9 @@
     "forever": "latest",
     "formidable": "latest",
     "hashids": "1.0.0",
-    "iron": "^2.1.3",
+    "iron": "^4.0.0",
     "jade": "latest",
-    "jsonwebtoken": "^1.1.2",
+    "jsonwebtoken": "latest",
     "kue": "^0.8.12",
     "lodash": "latest",
     "mean-logger": "latest",
@@ -58,24 +54,10 @@
     "mongoose": "^4.2.4",
     "morgan": "latest",
     "multer": "^0.1.8",
-    "oauth2orize": "latest",
-    "passport": "latest",
-    "passport-facebook": "latest",
-    "passport-github": "latest",
-    "passport-google-oauth": "latest",
-    "passport-http": "latest",
-    "passport-http-bearer": "latest",
-    "passport-local": "latest",
-    "passport-oauth2-client-password": "latest",
-    "passport-twitter": "latest",
     "q": "latest",
     "redis": "^0.12.1",
     "request": "^2.57.0",
-    "restler": "latest",
-    "s3": "^4.4.0",
-    "underscore": "latest",
-    "aws-cloudfront-sign": "latest",
-    "view-helpers": "latest"
+    "restler": "latest"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
