--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "grunt-timer": "~0.5.8"
   },
   "engines": {
-    "node": "~0.12.7",
-    "npm": ">2.11.3"
+    "node": "5.4.0",
+    "npm" : "3.3.12"
   }
 }
