--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mongoose": "^4.2.4",
     "morgan": "latest",
     "multer": "^0.1.8",
+    "newrelic": "^1.26.1",
     "q": "latest",
     "redis": "^0.12.1",
     "request": "^2.57.0",
@@ -87,6 +88,6 @@
   },
   "engines": {
     "node": "5.4.0",
-    "npm" : "3.3.12"
+    "npm": "3.3.12"
   }
 }
